--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,18 @@
     <h1 class="mt-2">Socket Client</h1>
     <hr>
 
+    <div class="container row">
+        <div class="col-sm-auto">
+            <p>Server Status:</p>
+        </div>
+
+        <div class="col-sm-auto">
+            <span id="lblOnline" class="btn btn-success">Online</span>
+            <span id="lblOffline" class="btn btn-danger">Offline</span>
+        </div>
+
+    </div>
+
     <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script>
 </body>
