--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         </div>
         <div class="col">
             <button id="btnSend" type="button" class="btn btn-primary">
-                Enviar
+                Send
             </button>
         </div>
     </div>
